ocaml/testsuite/tests/typing-layouts/parsing.compilers.reference
type 'a t0 = 'a list
Line 2, characters 11-20:
2 | type ('a : immediate) t0 = 'a list;;
               ^^^^^^^^^
Error: Layout immediate is used here, but the appropriate layouts extension is not enabled
Line 2, characters 11-15:
2 | type ('a : void) t0 = 'a list;;
               ^^^^
Error: Layout void is used here, but the appropriate layouts extension is not enabled
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Syntax error: layout expected.
Line 2, characters 9-15:
2 | type t = float#;;
             ^^^^^^
Error: This construct requires the alpha version of the extension "layouts", which is disabled and cannot be used
Line 2, characters 9-13:
2 | type t = int#;;
             ^^^^
Error: This construct requires the alpha version of the extension "layouts", which is disabled and cannot be used
Line 2, characters 9-17:
2 | type t = Float.t#;;
             ^^^^^^^^
Error: This construct requires the alpha version of the extension "layouts", which is disabled and cannot be used

